--- a/resources/assets/less/bem/logo-menu.less
+++ b/resources/assets/less/bem/logo-menu.less
@@ -20,6 +20,7 @@
 .logo-menu {
   width: 100%;
   height: 100%;
+  position: absolute;
 
   &__logo {
     width: 100%;
